--- a/src/main/webapp/themes/gray-orange/variables.less
+++ b/src/main/webapp/themes/gray-orange/variables.less
@@ -14,34 +14,21 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         darken(#428bca, 6.5%); // #337ab7
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-primary:         #424f63;
+@brand-success:         #65cea7;
+@brand-info:            #6bafbd;
+@brand-warning:         #f3ce85;
+@brand-danger:          #fc8675;
 
-
-@font-face {
-    font-family: 'source_sans_proregular';
-    src: url('fonts/sourcesanspro-regular.eot');
-    src: url('fonts/sourcesanspro-regular.eot?#iefix') format('embedded-opentype'),
-    url('fonts/sourcesanspro-regular.woff2') format('woff2'),
-    url('fonts/sourcesanspro-regular.woff') format('woff'),
-    url('fonts/sourcesanspro-regular.ttf') format('truetype'),
-    url('fonts/sourcesanspro-regular.svg#source_sans_proregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
 
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #F3F3F4;
+@body-bg:               #F9F9F9;
 //** Global text color on `<body>`.
-@text-color:            @gray-dark;
+@text-color:            #777;
 
 //** Global textual link color.
 @link-color:            @brand-primary;
@@ -55,15 +42,15 @@
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-@font-family-sans-serif:  'source_sans_proregular', sans-serif;
-@font-family-serif:       'source_sans_proregular', sans-serif;
+@font-family-sans-serif:  'Open Sans',sans-serif;
+@font-family-serif:       'Open Sans',sans-serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
-@font-family-monospace:   'source_sans_proregular', sans-serif;
+@font-family-monospace:   'Open Sans',sans-serif;
 @font-family-base:        @font-family-sans-serif;
 
 @font-size-base:          12px;
-@font-size-large:         ceil((@font-size-base * 1.2)); // ~18px
-@font-size-small:         ceil((@font-size-base * 0.9)); // ~12px
+@font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
+@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
 @font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
 @font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
@@ -100,24 +87,24 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     6px;
-@padding-base-horizontal:   8px;
+@padding-base-vertical:     4px;
+@padding-base-horizontal:   12px;
 
 @padding-large-vertical:    10px;
 @padding-large-horizontal:  16px;
 
-@padding-small-vertical:    2px;
-@padding-small-horizontal:  4px;
+@padding-small-vertical:    5px;
+@padding-small-horizontal:  10px;
 
 @padding-xs-vertical:       1px;
-@padding-xs-horizontal:     3px;
+@padding-xs-horizontal:     5px;
 
 @line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
 @line-height-small:         1.5;
 
-@border-radius-base:        4px;
+@border-radius-base:        3px;
 @border-radius-large:       6px;
-@border-radius-small:       3px;
+@border-radius-small:       2px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
@@ -135,20 +122,20 @@
 //## Customizes the `.table` component with basic values, each used across all table variations.
 
 //** Padding for `<th>`s and `<td>`s.
-@table-cell-padding:            @padding-base-vertical @padding-base-horizontal;
+@table-cell-padding:            3px;
 //** Padding for cells in `.table-condensed`.
-@table-condensed-cell-padding:  @padding-small-vertical @padding-small-horizontal;
+@table-condensed-cell-padding:  5px;
 
 //** Default background color used for all tables.
 @table-bg:                      #fff;
 //** Background color used for `.table-striped`.
 @table-bg-accent:               #f9f9f9;
 //** Background color used for `.table-hover`.
-@table-bg-hover:                #E2F7FF;
+@table-bg-hover:                #CFEAE8;
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            rgba(0,0,0,0.05);
+@table-border-color:            #ddd;
 
 
 //== Buttons
@@ -182,11 +169,6 @@
 @btn-danger-border:              darken(@btn-danger-bg, 5%);
 
 @btn-link-disabled-color:        @gray-light;
-
-// Allows for customizing button radius independently from global border radius
-@btn-border-radius-base:         @border-radius-base;
-@btn-border-radius-large:        @border-radius-large;
-@btn-border-radius-small:        @border-radius-small;
 
 
 //== Forms
@@ -226,7 +208,7 @@
 @input-height-small:             (floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
 
 //** `.form-group` margin
-@form-group-margin-bottom:       10px;
+@form-group-margin-bottom:       15px;
 
 @legend-color:                   @gray-dark;
 @legend-border-color:            #e5e5e5;
@@ -245,20 +227,20 @@
 //## Dropdown menu container and contents.
 
 //** Background for the dropdown menu.
-@dropdown-bg:                    #fff;
+@dropdown-bg:                    #424F63;
 //** Dropdown menu `border-color`.
 @dropdown-border:                rgba(0,0,0,.15);
 //** Dropdown menu `border-color` **for IE8**.
-@dropdown-fallback-border:       #ccc;
+@dropdown-fallback-border:       #FFF;
 //** Divider color for between dropdown items.
-@dropdown-divider-bg:            #e5e5e5;
+@dropdown-divider-bg:            #DDD;
 
 //** Dropdown link text color.
-@dropdown-link-color:            @gray-dark;
+@dropdown-link-color:            #FFFFFF;
 //** Hover color for dropdown links.
-@dropdown-link-hover-color:      darken(@gray-dark, 5%);
+@dropdown-link-hover-color:      #FFF;
 //** Hover background for dropdown links.
-@dropdown-link-hover-bg:         #f5f5f5;
+@dropdown-link-hover-bg:         #65CEA7;
 
 //** Active dropdown menu item text color.
 @dropdown-link-active-color:     @component-active-color;
@@ -377,17 +359,16 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #FFFFFF;
-@navbar-default-bg:                #23B7E5;
-@navbar-default-border:            transparent;
-@navbar-default-hover-bg:          transparent;
+@navbar-default-color:             #777;
+@navbar-default-bg:                #FFFFFF;
+@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                #FFF;
-@navbar-default-link-hover-color:          #117391;
+@navbar-default-link-color:                #777;
+@navbar-default-link-hover-color:          #333;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #117391;
-@navbar-default-link-active-bg:            transparent;
+@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
 
@@ -433,20 +414,20 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          @padding-base-vertical @padding-base-horizontal;
-@nav-link-hover-bg:                         @gray-lighter;
+@nav-link-padding:                          10px 15px;
+@nav-link-hover-bg:                         #272938;
 
 @nav-disabled-link-color:                   @gray-light;
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
-@nav-tabs-border-color:                     #ddd;
+@nav-tabs-border-color:                     #F1F5FC;
 
-@nav-tabs-link-hover-border-color:          @gray-lighter;
+@nav-tabs-link-hover-border-color:          transparent;
 
-@nav-tabs-active-link-hover-bg:             #fff;
-@nav-tabs-active-link-hover-color:          @text-color;
-@nav-tabs-active-link-hover-border-color:   #ddd;
+@nav-tabs-active-link-hover-bg:             #FFF;
+@nav-tabs-active-link-hover-color:          #666666;
+@nav-tabs-active-link-hover-border-color:   #F1F5FC;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
@@ -461,12 +442,12 @@
 //
 //##
 
-@pagination-color:                     @link-color;
+@pagination-color:                     #777;
 @pagination-bg:                        #fff;
 @pagination-border:                    #ddd;
 
 @pagination-hover-color:               @link-hover-color;
-@pagination-hover-bg:                  @gray-lighter;
+@pagination-hover-bg:                  #F2F2F2;
 @pagination-hover-border:              #ddd;
 
 @pagination-active-color:              #fff;
@@ -503,27 +484,26 @@
 @jumbotron-bg:                   @gray-lighter;
 @jumbotron-heading-color:        inherit;
 @jumbotron-font-size:            ceil((@font-size-base * 1.5));
-@jumbotron-heading-font-size:    ceil((@font-size-base * 4.5));
 
 
 //== Form states and alerts
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-@state-success-text:             #3c763d;
-@state-success-bg:               #dff0d8;
+@state-success-text:             #1b601c;
+@state-success-bg:               #b2e7d3;
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
-@state-info-text:                #31708f;
-@state-info-bg:                  #d9edf7;
+@state-info-text:                #0f5d84;
+@state-info-bg:                  #b2d5dc;
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
-@state-warning-text:             #8a6d3b;
-@state-warning-bg:               #fcf8e3;
+@state-warning-text:             #8B6420;
+@state-warning-bg:               #FCF3E2;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              #a94442;
-@state-danger-bg:                #f2dede;
+@state-danger-text:              #691715;
+@state-danger-bg:                #feded9;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
 
@@ -602,10 +582,10 @@
 //##
 
 //** Padding applied to the modal body
-@modal-inner-padding:         @padding-base-horizontal;
+@modal-inner-padding:         15px;
 
 //** Padding applied to the modal title
-@modal-title-padding:         @padding-base-horizontal;
+@modal-title-padding:         15px;
 //** Modal title line-height
 @modal-title-line-height:     @line-height-base;
 
@@ -634,7 +614,7 @@
 //
 //## Define alert colors, border radius, and padding.
 
-@alert-padding:               @padding-base-horizontal;
+@alert-padding:               15px;
 @alert-border-radius:         @border-radius-base;
 @alert-link-font-weight:      bold;
 
@@ -694,7 +674,7 @@
 //** Text color of active list items
 @list-group-active-color:       @component-active-color;
 //** Background color of active list items
-@list-group-active-bg:          #23B7E5;
+@list-group-active-bg:          @component-active-bg;
 //** Border color of active list elements
 @list-group-active-border:      @list-group-active-bg;
 //** Text color for content within active list items
@@ -717,18 +697,18 @@
 //##
 
 @panel-bg:                    #fff;
-@panel-body-padding:          @padding-base-horizontal;
-@panel-heading-padding:       @panel-body-padding;
+@panel-body-padding:          15px;
+@panel-heading-padding:       10px 15px;
 @panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
 //** Border color for elements within panels
-@panel-inner-border:          rgba(0,0,0,0.05);
-@panel-footer-bg:             #FFF;
+@panel-inner-border:          #F1F5FC;
+@panel-footer-bg:             #fff;
 
-@panel-default-text:          #106c88;
-@panel-default-border:        @panel-inner-border;
-@panel-default-heading-bg:    #C8EDF8;
+@panel-default-text:          @text-color;
+@panel-default-border:        #E7EAEC;
+@panel-default-heading-bg:    #FFFFFF;
 
 @panel-primary-text:          #fff;
 @panel-primary-border:        @brand-primary;
@@ -774,8 +754,8 @@
 //
 //##
 
-@well-bg:                     #fff;
-@well-border:                 darken(@well-bg, 7%);
+@well-bg:                     #e8e8e8;
+@well-border:                 #333333;
 
 
 //== Badges
@@ -801,12 +781,12 @@
 //
 //##
 
-@breadcrumb-padding-vertical:   @padding-base-vertical;
-@breadcrumb-padding-horizontal: @padding-base-horizontal;
+@breadcrumb-padding-vertical:   8px;
+@breadcrumb-padding-horizontal: 15px;
 //** Breadcrumb background color
-@breadcrumb-bg:                 #f5fcfd;
+@breadcrumb-bg:                 #f5f5f5;
 //** Breadcrumb text color
-@breadcrumb-color:              @brand-primary;
+@breadcrumb-color:              #ccc;
 //** Text color of current page in the breadcrumb
 @breadcrumb-active-color:       @gray-light;
 //** Textual separator for between breadcrumb elements
@@ -877,7 +857,5 @@
 @page-header-border-color:    @gray-lighter;
 //** Width of horizontal description list titles
 @dl-horizontal-offset:        @component-offset-horizontal;
-//** Point at which .dl-horizontal becomes horizontal
-@dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
